--- a/modules/stic_Advanced_Web_Forms/wizard/css/wizard.css
+++ b/modules/stic_Advanced_Web_Forms/wizard/css/wizard.css
@@ -1,5 +1,51 @@
+#wizard-section-title {
+    text-transform: uppercase;
+    margin-top: 1rem;
+}
+
+.wizard-container {
+    height: 700px;
+    overflow-y: auto;
+    margin: 0 0 1em 0;
+}
+
 .wizard-nav .button[disabled], 
 .wizard-nav .button[disabled]:hover {
     background-color: #828282 !important;
     cursor: not-allowed;
+}
+
+.input-group .btn {
+    margin: 0 0 0 3px !important;
+}
+
+.row {
+    margin-bottom: 1.5rem;
+}
+
+select, textarea {
+    max-width: 100% !important;
+}
+
+textarea, .selectize-control {
+    width: 100% !important;
+}
+
+.form-control, .form-select {
+    line-height: 20px;
+    min-height: 34px;
+    padding: 5px;
+    font-size: 1em;
+}
+
+.form-select.selectize-control {
+    height: auto !important;
+    border: none;
+    padding: 0;
+}
+
+.selectize-input.focus {
+    border-color:#86b7fe !important;
+    outline:0;
+    box-shadow:0 0 0 .25rem rgba(13,110,253,.25)
 }
