--- a/modules/stic_Advanced_Web_Forms/wizard/css/wizard.css
+++ b/modules/stic_Advanced_Web_Forms/wizard/css/wizard.css
@@ -49,3 +49,13 @@ textarea, .selectize-control {
     outline:0;
     box-shadow:0 0 0 .25rem rgba(13,110,253,.25)
 }
+
+#tree-container {
+    height: 80vh;
+    overflow-y: auto;
+    overflow-x: auto;
+}
+
+.jstree-icon {
+    background-image: none !important;
+}
