--- a/modules/stic_Advanced_Web_Forms/custom_views/css/sticControls.css
+++ b/modules/stic_Advanced_Web_Forms/custom_views/css/sticControls.css
@@ -100,6 +100,11 @@ h4 {
   font-weight: bold;
 }
 
+.spinner-container {
+  height: 100%;
+  display: flex;
+}
+
 .accordion-button {
   font-size: inherit;
   font-weight: bold;
