--- a/modules/stic_Signatures/SignaturePortal/SignaturePortal.css
+++ b/modules/stic_Signatures/SignaturePortal/SignaturePortal.css
@@ -186,6 +186,17 @@ section.signed-area iframe {
     bottom: 0;
 }
 
+.otp-input{
+    width: 48px;
+    height: 48px;
+    display: inline-block;
+    text-align: center;
+    border:3px solid #8d8c8c;
+    margin:5px;
+    font-weight: bolder;
+    font-size: large;
+}
+
 /* Media queries for responsiveness (Tailwind handles most, but for fine adjustments) */
 @media (max-width: 768px) {
     .stic-container {
