Esquema para añadir campos a Bloque de Datos

--- a/modules/stic_Advanced_Web_Forms/custom_views/css/sticControls.css
+++ b/modules/stic_Advanced_Web_Forms/custom_views/css/sticControls.css
@@ -22,6 +22,14 @@
   cursor: not-allowed;
 }
 
+.card .datablock {
+  border-width: medium;
+}
+
+.datablock-module {
+  margin: -5px 0px -5px -6px;
+}
+
 /* [required] + label::after {
   content: " *";
   color: red;
