--- a/themes/SuiteP/css/Stic/SticCustom.scss
+++ b/themes/SuiteP/css/Stic/SticCustom.scss
@@ -1424,3 +1424,12 @@ span.totals{
   cursor: not-allowed !important;
   pointer-events: none;
 }
+
+// Change position of alerts dropdown to open leftward and adjust size
+#alerts.dropdown-menu {
+  right: 0 !important;   // keep it aligned to the right edge of the button
+  left: auto !important; // override Bootstrap’s default left positioning
+  min-width: 280px;    
+  max-height: 400px;   
+  overflow-y: auto;    // Not growing beyond max-height
+}
