Wizard: Añadir Bloque de datos modal

--- a/modules/stic_Advanced_Web_Forms/custom_views/css/sticControls.css
+++ b/modules/stic_Advanced_Web_Forms/custom_views/css/sticControls.css
@@ -107,6 +107,10 @@
   opacity: unset !important;
 }
 
+.selectize-dropdown, .selectize-dropdown.form-control {
+  z-index: 1052;
+}
+
 .stic_panel {
   font-size: unset !important;
 }
@@ -205,7 +209,7 @@ select:invalid + label {
   align-items: center;
 }
 
-.row {
+.stic_panel form .row {
   margin-bottom: 1.5rem;
 }
 
