Wizard DataBlocks. Correcciones. Preparando Relaciones

--- a/modules/stic_Advanced_Web_Forms/custom_views/css/sticControls.css
+++ b/modules/stic_Advanced_Web_Forms/custom_views/css/sticControls.css
@@ -135,6 +135,11 @@ label, .form-label {
   font-weight: bold;
 }
 
+.datablock.has-errors, tr.has-errors td {
+  color: red !important;
+  font-style: italic;
+}
+
 label.field-required::after {
   content: " *";
   color: red;
